@@ -28,6 +28,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - unixhelper.cpp: kill process group on error.
     - unixhelper.{cpp,h}: implement signal unblocking in
       unixhelper::unix_cleanup(). Update documentation.
+    - unixhelper.cpp: port from std::signal() to sigaction(). Handle errors.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
